--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQKnowledgeStudyCell.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQKnowledgeStudyCell.xib
@@ -28,16 +28,15 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNd-2x-O2h">
-                        <rect key="frame" x="93" y="25.5" width="267" height="20.5"/>
+                        <rect key="frame" x="93" y="25.5" width="279" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gGl-5V-YwV">
-                        <rect key="frame" x="363" y="26" width="20" height="20"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="向下拷贝5" translatesAutoresizingMaskIntoConstraints="NO" id="gGl-5V-YwV">
+                        <rect key="frame" x="375" y="29" width="8" height="14"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="HCD-Mw-51I"/>
-                            <constraint firstAttribute="height" constant="20" id="QuM-7x-FQK"/>
+                            <constraint firstAttribute="width" constant="8" id="HCD-Mw-51I"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -57,4 +56,7 @@
             <point key="canvasLocation" x="-11" y="-9"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="向下拷贝5" width="7" height="14"/>
+    </resources>
 </document>
