--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQExamRecordsCell.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQExamRecordsCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="74" id="Sm9-c7-cmZ" customClass="YQExamRecordsCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExamRecords" rowHeight="74" id="Sm9-c7-cmZ" customClass="YQExamRecordsCell" customModule="OpticalValleyUnite" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="365" height="74"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Sm9-c7-cmZ" id="OfP-Z9-luY">
@@ -19,13 +19,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="物业综合考试" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s0y-E9-K8D">
-                        <rect key="frame" x="10" y="5" width="98" height="19.5"/>
+                        <rect key="frame" x="10" y="15" width="98" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="考试分数 :   100分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9f-Qs-Jkv">
-                        <rect key="frame" x="28" y="32.5" width="110" height="16"/>
+                        <rect key="frame" x="28" y="42.5" width="110" height="16"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="110" id="nrC-9G-RF3"/>
                         </constraints>
@@ -34,20 +34,20 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="分数" translatesAutoresizingMaskIntoConstraints="NO" id="KRN-WK-5nk">
-                        <rect key="frame" x="10" y="34.5" width="13" height="13"/>
+                        <rect key="frame" x="10" y="44.5" width="13" height="13"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="13" id="H3Q-E9-Mi9"/>
                             <constraint firstAttribute="height" constant="13" id="dhw-HM-yPZ"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="考试时间 :  60分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wCU-sS-edv">
-                        <rect key="frame" x="181" y="32.5" width="98" height="16"/>
+                        <rect key="frame" x="181" y="42.5" width="98" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="时间" translatesAutoresizingMaskIntoConstraints="NO" id="KhR-MM-DxM">
-                        <rect key="frame" x="158" y="34" width="13" height="13"/>
+                        <rect key="frame" x="158" y="44" width="13" height="13"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="13" id="gDV-rf-jnn"/>
                             <constraint firstAttribute="width" constant="13" id="wVA-nT-4L2"/>
@@ -55,12 +55,13 @@
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e2Z-xG-fUe">
                         <rect key="frame" x="0.0" y="65.5" width="365" height="8"/>
+                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="8" id="Hqb-eV-BZH"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="85分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="trz-eP-ppW">
-                        <rect key="frame" x="324" y="5" width="36" height="20"/>
+                        <rect key="frame" x="324" y="15" width="36" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -69,7 +70,7 @@
                 <constraints>
                     <constraint firstItem="B9f-Qs-Jkv" firstAttribute="centerY" secondItem="KRN-WK-5nk" secondAttribute="centerY" id="02w-Te-gK3"/>
                     <constraint firstItem="s0y-E9-K8D" firstAttribute="leading" secondItem="OfP-Z9-luY" secondAttribute="leading" constant="10" id="1oj-Zc-14p"/>
-                    <constraint firstItem="s0y-E9-K8D" firstAttribute="top" secondItem="OfP-Z9-luY" secondAttribute="top" constant="5" id="2DT-Kw-ZAu"/>
+                    <constraint firstItem="s0y-E9-K8D" firstAttribute="top" secondItem="OfP-Z9-luY" secondAttribute="top" constant="15" id="2DT-Kw-ZAu"/>
                     <constraint firstAttribute="bottom" secondItem="e2Z-xG-fUe" secondAttribute="bottom" id="2dz-2a-fKh"/>
                     <constraint firstItem="KhR-MM-DxM" firstAttribute="leading" secondItem="B9f-Qs-Jkv" secondAttribute="trailing" constant="20" id="6mm-NO-JV8"/>
                     <constraint firstItem="wCU-sS-edv" firstAttribute="centerY" secondItem="KhR-MM-DxM" secondAttribute="centerY" id="ERv-Yw-B9b"/>
