--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQMyScoreCell.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQMyScoreCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="67" id="KIw-TT-6Rq" customClass="YQMyScoreCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyScore" rowHeight="67" id="KIw-TT-6Rq" customClass="YQMyScoreCell" customModule="OpticalValleyUnite" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="354" height="67"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KIw-TT-6Rq" id="Emb-yf-LEw">
@@ -25,7 +25,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="85分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VbA-f8-4nO">
-                        <rect key="frame" x="313" y="23.5" width="36" height="19.5"/>
+                        <rect key="frame" x="303" y="23.5" width="36" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -33,7 +33,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="VbA-f8-4nO" firstAttribute="centerY" secondItem="OP8-tO-C2n" secondAttribute="centerY" id="KZ8-3N-Hq1"/>
-                    <constraint firstAttribute="trailing" secondItem="VbA-f8-4nO" secondAttribute="trailing" constant="5" id="Tu6-9m-smK"/>
+                    <constraint firstAttribute="trailing" secondItem="VbA-f8-4nO" secondAttribute="trailing" constant="15" id="Tu6-9m-smK"/>
                     <constraint firstItem="OP8-tO-C2n" firstAttribute="leading" secondItem="Emb-yf-LEw" secondAttribute="leading" constant="10" id="YTS-eg-K4U"/>
                     <constraint firstItem="OP8-tO-C2n" firstAttribute="centerY" secondItem="Emb-yf-LEw" secondAttribute="centerY" id="jI1-Uo-EBL"/>
                 </constraints>
